Shruthi | Added sure-fire and fail-safe plugins